--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "db:serve": "json-server --watch catalogo.json --port=3001"
+    "db:serve": "json-server --watch db.json --port=3001"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
